# translate

./: .gitignore  Nemesis  changelog.md  readme.md  translate.cabal
src/Codec/: SnowWhite.hs
src/Text/: Translate.hs
src/Text/Language/: Detect.hs  Internals.hs  Translate.hs
