Name:                 translate
Version:              2009.12.1
Build-type:           Simple
Synopsis:             askell binding to google translate
Description:



License:              BSD3
License-file:         LICENSE
Author:               Wang, Jinjing
Maintainer:           Wang, Jinjing <nfjinjing@gmail.com>
Build-Depends:        base
Cabal-version:        >= 1.2
category:             Codec
homepage:             http://github.com/nfjinjing/snow-white
data-files:           readme.md, changelog.md

library
  ghc-options: -Wall
  build-depends: base >= 4 && < 5, curl, json, network
  hs-source-dirs: src/
  exposed-modules:  
                    Text.Translate
